--- a/assemble.html
+++ b/assemble.html
@@ -60,12 +60,12 @@
 					<img src="https://goo.gl/WCnGNN" title="https://goo.gl/WCnGNN"
 						alt="조립부품들" />
 					<div class="w3-display-bottom">
-						<pre>조립에 사용한 부품들.
-					
-기본적으로 메인보드, CPU, PSU, HDD/SSD 등의 메모리, RAM, 케이스 등은 필수로 구매해야 하는 부품이며,
-옵션으로 ODD, VGA(그래픽카드) 등을 추가 장착할 수 있다.
-					
-+참고) 사진은 ODD 추가, VGA 제외</pre>
+						<p>조립에 사용한 부품들.<br/>
+					<br/>
+기본적으로 메인보드, CPU, PSU, HDD/SSD 등의 메모리, RAM, 케이스 등은 필수로 구매해야 하는 부품이며,<br/>
+옵션으로 ODD, VGA(그래픽카드) 등을 추가 장착할 수 있다.<br/>
+					<br/>
++참고) 사진은 ODD 추가, VGA 제외</p>
 					</div>
 				</div>
 			</div>
@@ -158,7 +158,7 @@
 
 			<div class="w3-center">
 				<div class="w3-section">
-					<button class="w3-button" onclick="plusDivs(-1)">❮ Prev</button>
+					<button class="w3-button" onclick="plusDivs(-1)">❮ prev</button>
 					<button class="w3-button" onclick="plusDivs(1)">Next ❯</button>
 				</div>
 				<div class="w3-border-top">
