--- a/assemble4.html
+++ b/assemble4.html
@@ -18,8 +18,7 @@
 			<a href="main.html">PASS</a>
 		</header>
 		<nav class="w3-bar w3-green">
-			<a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
+			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
@@ -60,7 +59,8 @@
 					<img src="https://goo.gl/LwUX8z" title="https://goo.gl/LwUX8z"
 						alt="PSU_motherboard" />
 					<div class="w3-display-bottom">
-						<pre>PSU의 전원커넥터(24핀)와 보조전원커넥터(4핀 또는 8핀)를 MB의 빨간색으로 표시된 부분에 연결시켜준다.</pre>
+						<p>PSU의 전원커넥터(24핀)와 보조전원커넥터(4핀 또는 8핀)를 메인보드의 빨간색으로 표시된 부분에
+							연결시켜준다.</p>
 					</div>
 				</div>
 			</div>
@@ -69,7 +69,7 @@
 					<img src="https://goo.gl/8LMmeB" title="https://goo.gl/8LMmeB"
 						alt="PSU_motherboard2" />
 					<div class="w3-display-bottom">
-						<pre>위의 사진은 PSU의 전원커넥터(24핀)이다.</pre>
+						<p>위의 사진은 PSU의 전원커넥터(24핀)이다.</p>
 					</div>
 				</div>
 			</div>
@@ -78,7 +78,7 @@
 					<img src="https://goo.gl/oFdpHz" title="https://goo.gl/oFdpHz"
 						alt="PSU_motherboard3" />
 					<div class="w3-display-bottom">
-						<pre>위의 사진은 PSU의 보조전원커넥터(4핀)이다.</pre>
+						<p>위의 사진은 PSU의 보조전원커넥터(4핀)이다.</p>
 					</div>
 				</div>
 			</div>
@@ -87,7 +87,7 @@
 					<img src="https://goo.gl/Q6oZ2R" title="https://goo.gl/Q6oZ2R"
 						alt="PSU_motherboard4" />
 					<div class="w3-display-bottom">
-						<pre>위의 사진은 1쪽에 빨간색으로 표시된 부분에 전원커넥터와 보조전원커넥터를 연결시킨 후의 MB 모습이다</pre>
+						<p>위의 사진은 1쪽에 빨간색으로 표시된 부분에 전원커넥터와 보조전원커넥터를 연결시킨 후의 메인보드 모습이다.</p>
 					</div>
 				</div>
 			</div>
@@ -97,8 +97,10 @@
 					<img src="https://goo.gl/316VAK" title="https://goo.gl/316VAK"
 						alt="case_ODD" />
 					<div class="w3-display-bottom">
-						<pre>다음은 ODD를 장착시키기 위해 케이스의 전면 베젤을 분리하는 모습이다.
-베젤을 분리시키는 이유는 ODD를 케이스 전면으로부터 삽입해야하기 때문이다.</pre>
+						<p>
+							다음은 ODD를 장착시키기 위해 케이스의 전면 베젤을 분리하는 모습이다. <br />베젤을 분리시키는 이유는 ODD를
+							케이스 전면으로부터 삽입해야하기 때문이다.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -108,7 +110,7 @@
 					<img src="https://goo.gl/ELuYXg" title="https://goo.gl/ELuYXg"
 						alt="case_ODD2" />
 					<div class="w3-display-bottom">
-						<pre>위의 사진처럼 ODD를 삽입해준다.</pre>
+						<p>위의 사진처럼 ODD를 삽입해준다.</p>
 					</div>
 				</div>
 			</div>
@@ -117,7 +119,9 @@
 					<img src="https://goo.gl/e9raDW" title="https://goo.gl/e9raDW"
 						alt="case_ODD3" />
 					<div class="w3-display-bottom">
-						<pre>케이스의 옆면에 ODD를 고정시키기 위한 나사 구멍이 있다. 이 구멍에 나사를 맞추어 조여준다.</pre>
+						<p>
+							케이스의 옆면에 ODD를 고정시키기 위한 나사 구멍이 있다. <br />이 구멍에 나사를 맞추어 조여준다.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -126,7 +130,7 @@
 					<img src="https://goo.gl/1tkq5J" title="https://goo.gl/1tkq5J"
 						alt="case_ODD4" />
 					<div class="w3-display-bottom">
-						<pre>위의 사진은 ODD를 장착한 케이스 전면의 모습이다.</pre>
+						<p>위의 사진은 ODD를 장착한 케이스 전면의 모습이다.</p>
 					</div>
 				</div>
 			</div>
@@ -135,7 +139,7 @@
 					<img src="https://goo.gl/PDV4v7" title="https://goo.gl/PDV4v7"
 						alt="case_ODD5" />
 					<div class="w3-display-bottom">
-						<pre>PSU에 내장된 SATA 전원 케이블을 ODD에 연결한다.</pre>
+						<p>PSU에 내장된 SATA 전원 케이블을 ODD에 연결한다.</p>
 					</div>
 				</div>
 			</div>
@@ -144,7 +148,7 @@
 					<img src="https://goo.gl/Bozp1j" title="https://goo.gl/Bozp1j"
 						alt="case_ODD6" />
 					<div class="w3-display-bottom">
-						<pre>ODD 제품에 내장된 SATA 데이터 케이블을 메인보드에 연결한다.</pre>
+						<p>ODD 제품에 내장된 SATA 데이터 케이블을 메인보드에 연결한다.</p>
 					</div>
 				</div>
 			</div>
@@ -154,7 +158,7 @@
 					<img src="https://goo.gl/jvxBXP" title="https://goo.gl/jvxBXP"
 						alt="case_SSD" />
 					<div class="w3-display-bottom">
-						<pre>빨간색으로 표시된 부분은 SSD를 장착시키는 곳이다.</pre>
+						<p>빨간색으로 표시된 부분은 SSD를 장착시키는 곳이다.</p>
 					</div>
 				</div>
 			</div>
@@ -164,7 +168,7 @@
 					<img src="https://goo.gl/tVJzGT" title="https://goo.gl/tVJzGT"
 						alt="case_SSD2" />
 					<div class="w3-display-bottom">
-						<pre>케이스에 SSD를 장착하고 내장된 SATA 케이블을 메인보드에 연결한다.</pre>
+						<p>케이스에 SSD를 장착하고 내장된 SATA 케이블을 메인보드에 연결한다.</p>
 					</div>
 				</div>
 			</div>
@@ -174,7 +178,7 @@
 					<img src="https://goo.gl/cNsBtx" title="https://goo.gl/cNsBtx"
 						alt="case_SSD4" />
 					<div class="w3-display-bottom">
-						<pre>위의 사진은 ODD와 SSD에 연결할 PSU의 SATA 전원 케이블이다.</pre>
+						<p>위의 사진은 ODD와 SSD에 연결할 PSU의 SATA 전원 케이블이다.</p>
 					</div>
 				</div>
 			</div>
@@ -184,7 +188,7 @@
 					<img src="https://goo.gl/eJnRnK" title="https://goo.gl/eJnRnK"
 						alt="case_SSD5" />
 					<div class="w3-display-bottom">
-						<pre>PSU에 내장된 SATA 전원 케이블을 SSD에 연결한다.</pre>
+						<p>PSU에 내장된 SATA 전원 케이블을 SSD에 연결한다.</p>
 					</div>
 				</div>
 			</div>
@@ -194,14 +198,14 @@
 					<img src="https://goo.gl/AZEYXw" title="https://goo.gl/AZEYXw"
 						alt="case_SSD3" />
 					<div class="w3-display-bottom">
-						<pre>위 사진은 SATA 데이터 케이블을 메인보드의 SATA 포트에 연결한 모습이다.</pre>
+						<p>위 사진은 SATA 데이터 케이블을 메인보드의 SATA 포트에 연결한 모습이다.</p>
 					</div>
 				</div>
 			</div>
 
 			<div class="w3-center">
 				<div class="w3-section">
-					<button class="w3-button" onclick="plusDivs(-1)">❮ Prev</button>
+					<button class="w3-button" onclick="plusDivs(-1)">❮ prev</button>
 					<button class="w3-button" onclick="plusDivs(1)">Next ❯</button>
 				</div>
 				<div class="w3-border-top">
