--- a/booting.html
+++ b/booting.html
@@ -61,8 +61,8 @@
 				<div class="mySlides">
 					<img src="https://goo.gl/71uUKg" title="https://goo.gl/71uUKg" alt="OSexpl1" />
 					<div class="w3-display-bottom">
-					<pre>운영체제 설치에 필요한 것은 설치 미디어, 제품키, 매뉴얼 등이다. 
-설치 미디어로는 CD, USB가 있는데 요즘은 ODD를 장착하지 않는 경우가 많기 때문에 USB 형태가 많다.</pre>
+					<p>운영체제 설치에 필요한 것은 설치 미디어, 제품키, 매뉴얼 등이다. <br/>
+설치 미디어로는 CD, USB가 있는데 요즘은 ODD를 장착하지 않는 경우가 많기 때문에 USB 형태가 많다.</p>
 					</div>
 				</div>
 			</div>
@@ -77,7 +77,7 @@
 
 			<div class="w3-center">
 				<div class="w3-section">
-					<button class="w3-button" onclick="plusDivs(-1)">❮ Prev</button>
+					<button class="w3-button" onclick="plusDivs(-1)">❮ prev</button>
 					<button class="w3-button" onclick="plusDivs(1)">Next ❯</button>
 				</div>
 				<div class="w3-border-top">
