--- a/hddexpl.html
+++ b/hddexpl.html
@@ -61,40 +61,40 @@
 				src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Laptop-hard-drive-exposed.jpg/440px-Laptop-hard-drive-exposed.jpg"
 				title="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Laptop-hard-drive-exposed.jpg/440px-Laptop-hard-drive-exposed.jpg"
 				alt="HDD" />
-			<pre class="w3-container">
-<b><q>정의</q></b>
-
-고속으로 회전하는 자성 물질이 발라진 금속디스크(platter)표면 위에 디지털 데이터를 기록하는 비휘발성(nonvolatile) 저장장치
-
-*플래터 회전속도
-–분당 회전 수(rpm; revolution per minute)으로 표기; 현재7,200rpm이 대종적이다.
-
-<b><q>구분</q></b>
-
- 1.용량에 따라
- •메모리용량
-–MB, GB, TB 등으로 표기; 현재1TB, 1.5TB, 2TB가대종
- •버퍼(buffer)메모리용량
-–MB로표기; 현재16MB, 32MB, 64MB가대종
-
- 2.플래터당 기록 밀도에 따라
-–GB 또는TB로표기; 현재1TB가일반PC용중에서는최고
- •내부 전송률
-–MB/s, GB/s 등으로 표기; 일반적으로 공개되어 있지 않음
- •접근속도
-–탐색시간(seek time), 회전지연시간(rotational latency)
-
-http://img.danawa.com/images/termDicImages/1/3/2699_1_1459495820.png
-
-<b><q>고려사항</q></b>
-
-•인터페이스
-–PATA(IDE), SATA(I, II, III) 등으로 표기; 현재SATA-III가대종
-
-성능에 가장 영향을 많이 미치는 것은 플래터의 회전 속도와 기록 밀도임, 버퍼 메모리의 용량 등은 다른 요소가 동등할 때 비교의 대상이 됨.
-요즘은 HDD 대신 SSD를 많이 사용한다. (특히 노트북에)
-
-		</pre>
+			<p class="w3-container">
+<b><q>정의</q></b><br/>
+<br/>
+고속으로 회전하는 자성 물질이 발라진 금속디스크(platter)표면 위에 디지털 데이터를 기록하는 비휘발성(nonvolatile) 저장장치<br/>
+<br/>
+*플래터 회전속도<br/>
+–분당 회전 수(rpm; revolution per minute)으로 표기; 현재7,200rpm이 대종적이다.<br/>
+<br/>
+<b><q>구분</q></b><br/>
+<br/>
+ 1.용량에 따라<br/>
+ •메모리용량<br/>
+–MB, GB, TB 등으로 표기; 현재1TB, 1.5TB, 2TB가대종<br/>
+ •버퍼(buffer)메모리용량<br/>
+–MB로표기; 현재16MB, 32MB, 64MB가대종<br/>
+<br/>
+ 2.플래터당 기록 밀도에 따라<br/>
+–GB 또는TB로표기; 현재1TB가일반PC용중에서는최고<br/>
+ •내부 전송률<br/>
+–MB/s, GB/s 등으로 표기; 일반적으로 공개되어 있지 않음<br/>
+ •접근속도<br/>
+–탐색시간(seek time), 회전지연시간(rotational latency)<br/>
+<br/>
+http://img.danawa.com/images/termDicImages/1/3/2699_1_1459495820.png<br/>
+<br/>
+<b><q>고려사항</q></b><br/>
+<br/>
+•인터페이스<br/>
+–PATA(IDE), SATA(I, II, III) 등으로 표기; 현재SATA-III가대종<br/>
+<br/>
+성능에 가장 영향을 많이 미치는 것은 플래터의 회전 속도와 기록 밀도임, 버퍼 메모리의 용량 등은 다른 요소가 동등할 때 비교의 대상이 됨.<br/>
+요즘은 HDD 대신 SSD를 많이 사용한다. (특히 노트북에)<br/>
+<br/>
+		</p>
 
 
 		</section>
