--- a/keyexpl.html
+++ b/keyexpl.html
@@ -62,40 +62,40 @@
 				title="http://ncc.phinf.naver.net/20140318_266/1395123715089QnOhu_JPEG/Untitled-2.jpg"
 				alt="KEYBOARD" />
 			<pre class="w3-container">
-<b><q>정의</q></b>
-
-입력장치의 하나.
-
-<b><q>구분</q></b>
-
- 1.멤브레인 키보드
--키를 누르면 아래의 고무 스위치 판이 눌러지고, 그 고무판을 통해서 기판이 눌러짐으로 인해 입력 신호를 전달하는 방식. 
-소음이 적고 내구성이 좋고 제조가 쉽고 저렴하다. 
-모든 키가 한 기판 안에 있기 때문에 동시에 여러 키가 눌리지 않는 경우가 많고, 타수가 빠를수록 오타가 많아질 확률이 많다. 
-
-+ 펜타그래프 키보드 = 멤브레인 형식, 오로지 얇고 가볍게 만들어 노트북에 쓰거나 휴대하기 좋게 만들기 위해 발명된 키보드
-
- 2.기계식 키보드
--키를 누르면 축 안의 스프링이 눌러지면서 입력신호가 전달되는 방식. 
-모든 키가 독립적이라 동시입력이 가능한 경우가 많아 게이밍 키보드로 주로 쓰인다. 
-각 키 별로 축이라는 것이 존재하기 때문에 단가가 비싸다. 축에도 종류가 있는데 이에 따라 키 감이 다르다. 
-대표적으로 청축, 적축, 갈축, 흑축이 있으며 핑크/브론즈/실버축 등도 출시되었다.
-
- 3.플런저 키보드
--멤브레인 키보드에 축을 설치해 키 감을 살린 키보드. 때문에 기계식 키보드와 거의 흡사한 키 감을 즐길 수 있다. 
-단가는 멤브레인보다 비싸고 기계식보다는 대부분 싸다.
- 
- 4.무접점 키보드
-다른 키보드들은 키 와 기판의 접점이 발생해야 입력신호가 발생한다면, 무접점의 경우에는 키를 누르면 눌리는 힘에 따라 축전량이 올라간다. 
-키를 누를 때 발생하는 그 축전량을 키 안의 축전기가 측정해, 일정량 이상이 되면 눌린 것으로 판단해 입력신호가 보내지게 되기 때문에 키를 세게, 완전히 다 누르지 않아도 입력이 된다. 
-이 때문에 기계식처럼 키를 누르는 재미는 없으나 장시간 입력을 해야 할 때 손목에 무리가 오지 않아 사무용으로 추천하는 키보드이다.
-
-<b><q>고려사항 혹은 주의사항</q></b>
-
-키보드의 경우 매장에서 직접 눌러보고 자신에게 맞는 키감의 키보드를 사는 것이 좋다.
-
-* 아래는 기계식 키보드의 축 설명
-		</pre>
+<b><q>정의</q></b><br/>
+<br/>
+입력장치의 하나.<br/>
+<br/>
+<b><q>구분</q></b><br/>
+<br/>
+ 1.멤브레인 키보드<br/>
+-키를 누르면 아래의 고무 스위치 판이 눌러지고, 그 고무판을 통해서 기판이 눌러짐으로 인해 입력 신호를 전달하는 방식. <br/>
+소음이 적고 내구성이 좋고 제조가 쉽고 저렴하다. <br/>
+모든 키가 한 기판 안에 있기 때문에 동시에 여러 키가 눌리지 않는 경우가 많고, 타수가 빠를수록 오타가 많아질 확률이 많다. <br/>
+<br/>
++ 펜타그래프 키보드 = 멤브레인 형식, 오로지 얇고 가볍게 만들어 노트북에 쓰거나 휴대하기 좋게 만들기 위해 발명된 키보드<br/>
+<br/>
+ 2.기계식 키보드<br/>
+-키를 누르면 축 안의 스프링이 눌러지면서 입력신호가 전달되는 방식. <br/>
+모든 키가 독립적이라 동시입력이 가능한 경우가 많아 게이밍 키보드로 주로 쓰인다. <br/>
+각 키 별로 축이라는 것이 존재하기 때문에 단가가 비싸다. 축에도 종류가 있는데 이에 따라 키 감이 다르다. <br/>
+대표적으로 청축, 적축, 갈축, 흑축이 있으며 핑크/브론즈/실버축 등도 출시되었다.<br/>
+<br/>
+ 3.플런저 키보드<br/>
+-멤브레인 키보드에 축을 설치해 키 감을 살린 키보드. 때문에 기계식 키보드와 거의 흡사한 키 감을 즐길 수 있다. <br/>
+단가는 멤브레인보다 비싸고 기계식보다는 대부분 싸다.<br/>
+ <br/>
+ 4.무접점 키보드<br/>
+다른 키보드들은 키 와 기판의 접점이 발생해야 입력신호가 발생한다면, 무접점의 경우에는 키를 누르면 눌리는 힘에 따라 축전량이 올라간다. <br/>
+키를 누를 때 발생하는 그 축전량을 키 안의 축전기가 측정해, 일정량 이상이 되면 눌린 것으로 판단해 입력신호가 보내지게 되기 때문에 키를 세게, 완전히 다 누르지 않아도 입력이 된다. <br/>
+이 때문에 기계식처럼 키를 누르는 재미는 없으나 장시간 입력을 해야 할 때 손목에 무리가 오지 않아 사무용으로 추천하는 키보드이다.<br/>
+<br/>
+<b><q>고려사항 혹은 주의사항</q></b><br/>
+<br/>
+키보드의 경우 매장에서 직접 눌러보고 자신에게 맞는 키감의 키보드를 사는 것이 좋다.<br/>
+<br/>
+* 아래는 기계식 키보드의 축 설명<br/>
+		</p>
 			<img
 				src="https://goo.gl/5dDUwi"
 				title="https://goo.gl/5dDUwi"
