--- a/mainexpl.html
+++ b/mainexpl.html
@@ -64,81 +64,81 @@
 				src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Intel_D945GCPE_Board.JPG/440px-Intel_D945GCPE_Board.JPG"
 				title="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Intel_D945GCPE_Board.JPG/440px-Intel_D945GCPE_Board.JPG"
 				alt="MAINBOARD2" />
-			<pre class="w3-container">
-<b><q>정의</q></b>
-
-컴퓨터 내에서 기본회로와 부품들을 담고 있는 가장 기본적이고 물리적인 하드웨어이며 마더보드, 주기판이라고도 한다. 
-저장장치와 메모리 사이의 데이터 전송, 메모리와 CPU 사이의 데이터 전송, 입출력장치와 PC사이의 데이터 전송 등의 일을 한다.  
-
-<b><q>구성 요소</q></b>
-
--칩셋: 메인보드의 핵심 기능을 구현하는 반도체 칩들
-노스브릿지: 메모리 컨트롤러 허브(고속장치들 제어, 데이터 전송 제어)
-사우스브릿지: 입출력 컨트롤러 허브(저속장치들 제어)
-얼마 전까지만 해도 메인보드의 칩셋은 노스브릿지(northbridge)와 사우스브릿지(southbridge) 
-또는 MCH(Memory Hub Controller) 와 ICH (I/O Controller Hub) 로 2개씩 짝을 이루었지만, 
-현재는 일부 기능을 CPU에서 직접 처리하고 나머지 기능을 모아서 1개로 통합하여 출시되고 있다.
-
--CPU 소켓: CPU를 장착하는 곳(Intel vs AMD)
-
--RAM 슬롯: RAM 모듈을 장착하는 곳
-SDRAM: 168핀
-DDR1: 184핀
-DDR2: 240핀
-DDR3: 240핀(모듈에 파인 홈의 위치가 DDR2와 다름)
-DDR4: 288핀
-*현재 주력은 DDR4(RAM 페이지에 자세한 설명)
-
--버스: 컴퓨터에서 데이터를 주고받는 통로
-내부버스: 레지스터 간의 데이터 전송 통로
-외부버스: CPU와 입출력 장치 간의 데이터 전송
-확장버스: 추가 카드들로부터 데이터 전송
-
--입출력 인터페이스
-PCI(Peripheral Component Interconnect) 버스: 32비트, 33MB/s
-PCI Express 버스(현재 주력): 1비트, 512MB/s ~ 8GB/s (PCIe x16)
-PCI Express 3.0: 2010년 11월부터 사용, 2.0에 비해 약 60% 성능 향상
-
--CMOS BIOS(=기본 입출력 시스템)
- : PC의 기본 입출력 장치와 메모리 등 각종 하드웨어 작동에 필요한 명령을 모아 놓은 프로그램 
-CMOS(Complementary metal–oxide–semiconductor)
- : 반도체 제작 방식 중 하나, 소모 전력의 양이 매우 낮음(데이터를 배터리에 의해 오랫동안 보관하기 위해 사용하는 데 적합), 
-   PC가 처음 켜졌을 때 제일 먼저 실행되는 프로그램
-POST(Power-On Self Test) 화면
- : BIOS가 PC의 하드웨어 검사, POST 화면의 마지막에 DEL키나 F2키 등을 누르면 CMOS BIOS 설정 화면으로 진입
-
-<b><q>구분</q></b>
-
-1. 메인보드 규격에 따라
-XT
-AT
-Baby-AT
-ATX: 현재 표준
-Micro-ATX(mATX): 현재 표준
-Mini-ATX
-Flex-ATX
-ITX
-BTX
-Mini-ITX
-Mini-STX
-
-<b><q>고려사항</q></b>
-
-•RAM 모듈과 규격이 맞아야 장착 가능하다.
-메인보드 칩셋에 따라 RAM 모듈의 성능을 완전히 지원할 수도 있고 그러지 못할 수도 있다.
-그러나 하위 모델의 RAM 모듈은 상위 모델의 칩셋을 가진 메인보드에 일반적으로 장착이 가능하다.
-
-•메인보드 제조사 (빅 3: ASUS, Gigabyte, MSI(ASRock이 대체자로 부상중)
-
-•크기: 케이스 크기에 달려 있으나, 대체적으로 ATX 크기가 mATX 크기보다 안정적이고 성능도 우월(작은 케이스가 아니라면 ATX 크기를 권장)
-
-•칩셋: 가장 최신보다는 한 세대 전의 베스트 셀링 모델 선택 권장, 차후 CPU 업그레이드를 고려한다면 최신 칩셋 선택. 최근 Intel 아니면 AMD 시리즈가 유명하다.
--Intel
-스카이레이크) H110(보급), B150(일반), H170(고급), Z170(고급)
-카비레이크) B250(일반) H270(고급), Z270(고급)
--AMD: A68(보급), A78(보급), A88X(일반), 970(일반)
-
-		</pre>
+			<p class="w3-container">
+<b><q>정의</q></b><br/>
+<br/>
+컴퓨터 내에서 기본회로와 부품들을 담고 있는 가장 기본적이고 물리적인 하드웨어이며 마더보드, 주기판이라고도 한다. <br/>
+저장장치와 메모리 사이의 데이터 전송, 메모리와 CPU 사이의 데이터 전송, 입출력장치와 PC사이의 데이터 전송 등의 일을 한다.  <br/>
+<br/>
+<b><q>구성 요소</q></b><br/>
+<br/>
+-칩셋: 메인보드의 핵심 기능을 구현하는 반도체 칩들<br/>
+노스브릿지: 메모리 컨트롤러 허브(고속장치들 제어, 데이터 전송 제어)<br/>
+사우스브릿지: 입출력 컨트롤러 허브(저속장치들 제어)<br/>
+얼마 전까지만 해도 메인보드의 칩셋은 노스브릿지(northbridge)와 사우스브릿지(southbridge) <br/>
+또는 MCH(Memory Hub Controller) 와 ICH (I/O Controller Hub) 로 2개씩 짝을 이루었지만, <br/>
+현재는 일부 기능을 CPU에서 직접 처리하고 나머지 기능을 모아서 1개로 통합하여 출시되고 있다.<br/>
+<br/>
+-CPU 소켓: CPU를 장착하는 곳(Intel vs AMD)<br/>
+<br/>
+-RAM 슬롯: RAM 모듈을 장착하는 곳<br/>
+SDRAM: 168핀<br/>
+DDR1: 184핀<br/>
+DDR2: 240핀<br/>
+DDR3: 240핀(모듈에 파인 홈의 위치가 DDR2와 다름)<br/>
+DDR4: 288핀<br/>
+*현재 주력은 DDR4(RAM 페이지에 자세한 설명)<br/>
+<br/>
+-버스: 컴퓨터에서 데이터를 주고받는 통로<br/>
+내부버스: 레지스터 간의 데이터 전송 통로<br/>
+외부버스: CPU와 입출력 장치 간의 데이터 전송<br/>
+확장버스: 추가 카드들로부터 데이터 전송<br/>
+<br/>
+-입출력 인터페이스<br/>
+PCI(Peripheral Component Interconnect) 버스: 32비트, 33MB/s<br/>
+PCI Express 버스(현재 주력): 1비트, 512MB/s ~ 8GB/s (PCIe x16)<br/>
+PCI Express 3.0: 2010년 11월부터 사용, 2.0에 비해 약 60% 성능 향상<br/>
+<br/>
+-CMOS BIOS(=기본 입출력 시스템)<br/>
+ : PC의 기본 입출력 장치와 메모리 등 각종 하드웨어 작동에 필요한 명령을 모아 놓은 프로그램 <br/>
+CMOS(Complementary metal–oxide–semiconductor)<br/>
+ : 반도체 제작 방식 중 하나, 소모 전력의 양이 매우 낮음(데이터를 배터리에 의해 오랫동안 보관하기 위해 사용하는 데 적합), <br/>
+   PC가 처음 켜졌을 때 제일 먼저 실행되는 프로그램<br/>
+POST(Power-On Self Test) 화면<br/>
+ : BIOS가 PC의 하드웨어 검사, POST 화면의 마지막에 DEL키나 F2키 등을 누르면 CMOS BIOS 설정 화면으로 진입<br/>
+<br/>
+<b><q>구분</q></b><br/>
+<br/>
+1. 메인보드 규격에 따라<br/>
+XT<br/>
+AT<br/>
+Baby-AT<br/>
+ATX: 현재 표준<br/>
+Micro-ATX(mATX): 현재 표준<br/>
+Mini-ATX<br/>
+Flex-ATX<br/>
+ITX<br/>
+BTX<br/>
+Mini-ITX<br/>
+Mini-STX<br/>
+<br/>
+<b><q>고려사항</q></b><br/>
+<br/>
+•RAM 모듈과 규격이 맞아야 장착 가능하다.<br/>
+메인보드 칩셋에 따라 RAM 모듈의 성능을 완전히 지원할 수도 있고 그러지 못할 수도 있다.<br/>
+그러나 하위 모델의 RAM 모듈은 상위 모델의 칩셋을 가진 메인보드에 일반적으로 장착이 가능하다.<br/>
+<br/>
+•메인보드 제조사 (빅 3: ASUS, Gigabyte, MSI(ASRock이 대체자로 부상중)<br/>
+<br/>
+•크기: 케이스 크기에 달려 있으나, 대체적으로 ATX 크기가 mATX 크기보다 안정적이고 성능도 우월(작은 케이스가 아니라면 ATX 크기를 권장)<br/>
+<br/>
+•칩셋: 가장 최신보다는 한 세대 전의 베스트 셀링 모델 선택 권장, 차후 CPU 업그레이드를 고려한다면 최신 칩셋 선택. 최근 Intel 아니면 AMD 시리즈가 유명하다.<br/>
+-Intel<br/>
+스카이레이크) H110(보급), B150(일반), H170(고급), Z170(고급)<br/>
+카비레이크) B250(일반) H270(고급), Z270(고급)<br/>
+-AMD: A68(보급), A78(보급), A88X(일반), 970(일반)<br/>
+<br/>
+		</p>
 
 		</section>
 	</div>
