--- a/mouseexpl.html
+++ b/mouseexpl.html
@@ -61,29 +61,29 @@
 				src="http://imgnews.naver.com/image/5137/2012/11/14/31784_37743_1628_59_20121114134809.jpg"
 				title="http://imgnews.naver.com/image/5137/2012/11/14/31784_37743_1628_59_20121114134809.jpg"
 				alt="MOUSE" />
-			<pre class="w3-container">
-<b><q>정의</q></b>
-
-컴퓨터 화면 위에서 커서 또는 아이콘 등을 이동시킬 때 사용하는 입력장치의 하나이다.
-
-<b><q>구분</q></b>
-
- 1.용도에 따라
--사무용
-1) 버티컬 마우스 : 장시간 키보드와 마우스를 사용하면 생기기 쉽다고 알려진 수근관증후군(일명 손목 터널 증후군)을 예방하기 위해 수직으로 세워서 사용하는 마우스
-2) 무소음 마우스 : 마우스 클릭 시 나는 소리를 최대한 줄여서 작업의 집중도를 높일 수 있도록 제작된 마우스
-
--게임용
--기타 등등
-
-<b><q>고려사항</q></b>
--감도 : 마우스의 움직임 크기에 따라 화면 커서의 움직임 크기가 조정되는 관계. 
-조정 방법에는 마우스의 감도에 따라 물리적인 마우스 움직임 길이당 커서 움직임이 변하는 것과 응용 프로그램이나 마우스 드라이버에 의해서 커서 움직임의 감도가 변하는 것이 있다.
-
-*게임을 할 용도로 구입할 경우, 마우스뿐만 아니라 게임용 패드 또한 준비하는 것을 권장. 
-*FPS 게임 유저의 경우 무선 마우스보다 유선 마우스를 추천함. 무선의 경우 마우스가 조금 더 무거워 지는 경향이 있으며 유선보다 반응속도가 느린 경향이 있다.
-
-		</pre>
+			<p class="w3-container">
+<b><q>정의</q></b><br/>
+<br/>
+컴퓨터 화면 위에서 커서 또는 아이콘 등을 이동시킬 때 사용하는 입력장치의 하나이다.<br/>
+<br/>
+<b><q>구분</q></b><br/>
+<br/>
+ 1.용도에 따라<br/>
+-사무용<br/>
+1) 버티컬 마우스 : 장시간 키보드와 마우스를 사용하면 생기기 쉽다고 알려진 수근관증후군(일명 손목 터널 증후군)을 예방하기 위해 수직으로 세워서 사용하는 마우스<br/>
+2) 무소음 마우스 : 마우스 클릭 시 나는 소리를 최대한 줄여서 작업의 집중도를 높일 수 있도록 제작된 마우스<br/>
+<br/>
+-게임용<br/>
+-기타 등등<br/>
+<br/>
+<b><q>고려사항</q></b><br/>
+-감도 : 마우스의 움직임 크기에 따라 화면 커서의 움직임 크기가 조정되는 관계. <br/>
+조정 방법에는 마우스의 감도에 따라 물리적인 마우스 움직임 길이당 커서 움직임이 변하는 것과 응용 프로그램이나 마우스 드라이버에 의해서 커서 움직임의 감도가 변하는 것이 있다.<br/>
+<br/>
+*게임을 할 용도로 구입할 경우, 마우스뿐만 아니라 게임용 패드 또한 준비하는 것을 권장. <br/>
+*FPS 게임 유저의 경우 무선 마우스보다 유선 마우스를 추천함. 무선의 경우 마우스가 조금 더 무거워 지는 경향이 있으며 유선보다 반응속도가 느린 경향이 있다.<br/>
+<br/>
+		</p>
 
 
 		</section>
