--- a/powerexpl.html
+++ b/powerexpl.html
@@ -61,41 +61,40 @@
 				src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/PSU-Open1.jpg/580px-PSU-Open1.jpg"
 				title="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/PSU-Open1.jpg/580px-PSU-Open1.jpg"
 				alt="POWERSUPPLY" />
-			<pre class="w3-container">
-<b><q>정의</q></b>
-
-컴퓨터 구동에 필요한 전력을 공급해 주는 장치. 파워 서플라이, 파워 라고도 부름. 
-CPU가 PC의 두뇌라면, PSU는 PC의 심장이다.
-
-<b><q>구분</q></b>
-
- 1. 크기에 따라
--(표준) ATX : 컨버터가 있는 경우에는 표준 ATX만 장착 가능한 케이스에도 장착이 가능하며, 주로 미니타워 등 소형 케이스에 장착
--m-ATX(STX) : 컨버터가 있는 경우에는 표준 ATX만 장착 가능한 케이스에도 장착이 가능하며, 주로 미니타워 등 소형 케이스에 장착
--TFX : 흔히 초슬림형 케이스라고 부르는 LP(low profile)형 케이스에 장착
-
- 2. 정격 출력에 따라
--보급형: 500W
--고급형: 오버클럭이나 다중그래픽을 염두에 두고 있다면 650W 이상의 파워 사용
-
-
-<b><q>고려사항</q></b>
-
-안정적인 전력 공급은 PC부품들의 안정적인 작동과 긴 수명에 매우 중요하기 때문에,
-부품들이 필요로 하는 전력 용량 이상의 넉넉한 전력 공급이 첫째로 필요하다.
-
- •부품들이 필요로 하는 전력 용량 계산 사이트
-–eXtremePower Supply Calculator https://outervision.com/power-supply-calculator
--스파클텍파워전력측정 http://www.sparklepower.co.kr/spi/support_watt.php
--컴퓨마트소비전력측정 http://www.compumart.co.kr/contact/pconsump.asp
-상기 사이트에서 계산하여 나온 예상 필요 출력에 다소의 여유분을 추가하여 파워 서플라이의 용량을 결정
-
-*일반적으로 파워의 제품명에는 출력량이 들어가는 경우가 많다는 점을 악용하여 제품명에 정격출력과 관계없는 숫자를 적어 놓는 경우가 있음. 
-*제품명보다는 정격출력을 꼭 확인하고 구매할 것.
-*파워 측면에 붙어있는 스티커를 통해 총 출력량이 얼마나 되는지 꼭 확인 / 제품명에 잘못 표기하는 경우도 있기 때문에 꼭 출력량 직접 확인해봐야 함.
-
-
-		</pre>
+			<p class="w3-container">
+<b><q>정의</q></b><br/>
+<br/>
+컴퓨터 구동에 필요한 전력을 공급해 주는 장치. 파워 서플라이, 파워 라고도 부름. <br/>
+CPU가 PC의 두뇌라면, PSU는 PC의 심장이다.<br/>
+<br/>
+<b><q>구분</q></b><br/>
+<br/>
+ 1. 크기에 따라<br/>
+-(표준) ATX : 컨버터가 있는 경우에는 표준 ATX만 장착 가능한 케이스에도 장착이 가능하며, 주로 미니타워 등 소형 케이스에 장착<br/>
+-m-ATX(STX) : 컨버터가 있는 경우에는 표준 ATX만 장착 가능한 케이스에도 장착이 가능하며, 주로 미니타워 등 소형 케이스에 장착<br/>
+-TFX : 흔히 초슬림형 케이스라고 부르는 LP(low profile)형 케이스에 장착<br/>
+<br/>
+ 2. 정격 출력에 따라<br/>
+-보급형: 500W<br/>
+-고급형: 오버클럭이나 다중그래픽을 염두에 두고 있다면 650W 이상의 파워 사용<br/>
+<br/>
+<br/>
+<b><q>고려사항</q></b><br/>
+<br/>
+안정적인 전력 공급은 PC부품들의 안정적인 작동과 긴 수명에 매우 중요하기 때문에,<br/>
+부품들이 필요로 하는 전력 용량 이상의 넉넉한 전력 공급이 첫째로 필요하다.<br/>
+<br/>
+ •부품들이 필요로 하는 전력 용량 계산 사이트<br/>
+–eXtremePower Supply Calculator https://outervision.com/power-supply-calculator<br/>
+-스파클텍파워전력측정 http://www.sparklepower.co.kr/spi/support_watt.php<br/>
+-컴퓨마트소비전력측정 http://www.compumart.co.kr/contact/pconsump.asp<br/>
+상기 사이트에서 계산하여 나온 예상 필요 출력에 다소의 여유분을 추가하여 파워 서플라이의 용량을 결정<br/>
+<br/>
+*일반적으로 파워의 제품명에는 출력량이 들어가는 경우가 많다는 점을 악용하여 제품명에 정격출력과 관계없는 숫자를 적어 놓는 경우가 있음. <br/>
+*제품명보다는 정격출력을 꼭 확인하고 구매할 것.<br/>
+*파워 측면에 붙어있는 스티커를 통해 총 출력량이 얼마나 되는지 꼭 확인 / 제품명에 잘못 표기하는 경우도 있기 때문에 꼭 출력량 직접 확인해봐야 함.<br/>
+<br/>
+		</p>
 
 
 		</section>
