--- a/ssdexpl.html
+++ b/ssdexpl.html
@@ -61,42 +61,42 @@
 				src="https://upload.wikimedia.org/wikipedia/commons/8/89/Hp-io-accelerator-isometric.gif"
 				title="https://upload.wikimedia.org/wikipedia/commons/8/89/Hp-io-accelerator-isometric.gif"
 				alt="SSD" />
-			<pre class="w3-container">
-<b><q>정의</q></b>
-
-반도체 플래시 메모리 상에 데이터를 저장할 수 있도록 고안된 비휘발성 저장 장치이다.
-집적회로를 디스크 드라이브처럼 구성한 반도체 메모리 배열을 포함하고 있다.
-탐색시간과 지연시간이 없으며 높은 내구성을 가지고 무소음이라는 장점이 있지만, 
-가격이 비싸고 가격대비 용량이 적고 기록 속도가 상대적으로 느리다는 단점이 있다.
-또한 기록과 삭제 횟수가 한정되어 있어 기대 사용 수명이 미리 정해져 있다.
-
-*입출력 속도
-- 읽기 속도는 180~555 MB/s, 쓰기 속도는 95~520 MB/s
-
-<b><q>구분</q></b>
-
- 1. 용량에 따라
-120GB
-250GB
-
- 2. 인터페이스에 따라
-SATA 2 또는 SATA 3가 대부분, 최근은 거의 SATA 3로 수렴
-대부분 HDD와 동일한 인터페이스 사용
-
- 3. 크기에 따라
-2.5인치 또는 3.5인치, 최근은 거의 2.5인치로 수렴
-
- 4. 컨트롤러 칩에 따라
-Sandforce, 삼성 Intel, Marvell, JMicron, Toshiba, SiliconMotion, Phison 등
-
- 5. 플래시 메모리에 따라
-공정: 16nm, 19nm, 20nm, 25nm 등
-종류: SLC, MLC, QLC 등
-
-
-<b><q>고려사항</q></b>
-
-현재 시장에서 가장 많이 판매되고 있는 용량들 중 한 가지를 선택하는 것이 가장 가격 대비 용량이 좋다.
+			<p class="w3-container">
+<b><q>정의</q></b><br/>
+<br/>
+반도체 플래시 메모리 상에 데이터를 저장할 수 있도록 고안된 비휘발성 저장 장치이다.<br/>
+집적회로를 디스크 드라이브처럼 구성한 반도체 메모리 배열을 포함하고 있다.<br/>
+탐색시간과 지연시간이 없으며 높은 내구성을 가지고 무소음이라는 장점이 있지만, <br/>
+가격이 비싸고 가격대비 용량이 적고 기록 속도가 상대적으로 느리다는 단점이 있다.<br/>
+또한 기록과 삭제 횟수가 한정되어 있어 기대 사용 수명이 미리 정해져 있다.<br/>
+<br/>
+*입출력 속도<br/>
+- 읽기 속도는 180~555 MB/s, 쓰기 속도는 95~520 MB/s<br/>
+<br/>
+<b><q>구분</q></b><br/>
+<br/>
+ 1. 용량에 따라<br/>
+120GB<br/>
+250GB<br/>
+<br/>
+ 2. 인터페이스에 따라<br/>
+SATA 2 또는 SATA 3가 대부분, 최근은 거의 SATA 3로 수렴<br/>
+대부분 HDD와 동일한 인터페이스 사용<br/>
+<br/>
+ 3. 크기에 따라<br/>
+2.5인치 또는 3.5인치, 최근은 거의 2.5인치로 수렴<br/>
+<br/>
+ 4. 컨트롤러 칩에 따라<br/>
+Sandforce, 삼성 Intel, Marvell, JMicron, Toshiba, SiliconMotion, Phison 등<br/>
+<br/>
+ 5. 플래시 메모리에 따라<br/>
+공정: 16nm, 19nm, 20nm, 25nm 등<br/>
+종류: SLC, MLC, QLC 등<br/>
+<br/>
+<br/>
+<b><q>고려사항</q></b><br/>
+<br/>
+현재 시장에서 가장 많이 판매되고 있는 용량들 중 한 가지를 선택하는 것이 가장 가격 대비 용량이 좋다.<br/>
 		</pre>
 
 
