--- a/assemble2.html
+++ b/assemble2.html
@@ -18,8 +18,7 @@
 			<a href="main.html">PASS</a>
 		</header>
 		<nav class="w3-bar w3-green">
-			<a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
+			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
@@ -60,7 +59,7 @@
 					<img src="https://goo.gl/yR7BPf" title="https://goo.gl/yR7BPf"
 						alt="motherboard_CPU1" />
 					<div class="w3-display-bottom">
-						<pre>빨간색으로 표시된 부분이 CPU 소켓을 열기 위한 레버 부분이다.</pre>
+						<p>빨간색으로 표시된 부분이 CPU 소켓을 열기 위한 레버 부분이다.</p>
 					</div>
 				</div>
 			</div>
@@ -70,7 +69,7 @@
 					<img src="https://goo.gl/dU8TVd" title="https://goo.gl/dU8TVd"
 						alt="motherboard_CPU2" />
 					<div class="w3-display-bottom">
-						<pre>빨간색 부분을 검지를 이용해 레버를 살짝 눌러서 옆으로 밀어 CPU 소켓을 연다.</pre>
+						<p>빨간색 부분을 검지를 이용해 레버를 살짝 눌러서 옆으로 밀어 CPU 소켓을 연다.</p>
 					</div>
 				</div>
 			</div>
@@ -80,8 +79,9 @@
 					<img src="https://goo.gl/2Y4N6p" title="https://goo.gl/2Y4N6p"
 						alt="motherboard_CPU3" />
 					<div class="w3-display-bottom">
-						<pre>CPU 소켓에 CPU를 장착한다. 이 때 CPU의 소켓과 CPU의 모서리가 잘 일치하도록 삽입한다.(CPU에 그려져 있는 삼각형 표시 참고)
-빨간색으로 표시된 나사 부분에 맞추어 올렸던 레버를 내려서 CPU를 소켓에 고정시킨다.</pre>
+						<p>CPU 소켓에 CPU를 장착한다. <br/>
+						이 때 CPU의 소켓과 CPU의 모서리가 잘 일치하도록 삽입한다. (CPU에 그려져 있는 삼각형 표시 참고)<br/> 
+						빨간색으로 표시된 나사 부분에 맞추어 올렸던 레버를 내려서 CPU를 소켓에 고정시킨다.</p>
 					</div>
 				</div>
 			</div>
@@ -91,8 +91,8 @@
 					<img src="https://goo.gl/LNvAMH" title="https://goo.gl/LNvAMH"
 						alt="motherboard_CPU4" />
 					<div class="w3-display-bottom">
-						<pre>MB에 빨간색으로 표시된 4개의 구멍은 쿨러의 핀을 장착시키는 부분이다.
-CPU 위에 쿨러를 얹고 쿨러의 네 모서리 핀을 딸깍 소리가 날 때까지 꾹 눌러 장착시킨다.</pre>
+						<p>메인보드에 빨간색으로 표시된 4개의 구멍은 쿨러의 핀을 장착시키는 부분이다. <br/>
+						CPU 위에 쿨러를 얹고 쿨러의 네 모서리 핀을 딸깍 소리가 날 때까지 꾹 눌러 장착시킨다.</p>
 					</div>
 				</div>
 			</div>
@@ -102,7 +102,7 @@ CPU 위에 쿨러를 얹고 쿨러의 네 모서리 핀을 딸깍 소리가 날 
 					<img src="https://goo.gl/1ri5Cz" title="https://goo.gl/1ri5Cz"
 						alt="motherboard_CPU5" />
 					<div class="w3-display-bottom">
-						<pre>쿨러가 올바르게 장착된 모습이다.</pre>
+						<p>쿨러가 올바르게 장착된 모습이다.</p>
 					</div>
 				</div>
 			</div>
@@ -111,8 +111,8 @@ CPU 위에 쿨러를 얹고 쿨러의 네 모서리 핀을 딸깍 소리가 날 
 					<img src="https://goo.gl/ahdm9Z" title="https://goo.gl/ahdm9Z"
 						alt="motherboard_CPU6" />
 					<div class="w3-display-bottom">
-						<pre>빨간색으로 표시된 부분은 쿨러를 MB에 연결시키는 커넥터이다. 이 부분을 자세히 보면 CPU_FAN이라고 표시되어 있다.
-여기에 쿨러로부터 나온 선을 연결시킨다.</pre>
+						<p>빨간색으로 표시된 부분은 쿨러를 메인보드에 연결시키는 커넥터이다. <br/>
+						이 부분을 자세히 보면 CPU_FAN이라고 표시되어 있다. 여기에 쿨러로부터 나온 선을 연결시킨다.</p>
 					</div>
 				</div>
 			</div>
@@ -121,9 +121,9 @@ CPU 위에 쿨러를 얹고 쿨러의 네 모서리 핀을 딸깍 소리가 날 
 					<img src="https://goo.gl/xNm5xY" title="https://goo.gl/xNm5xY"
 						alt="motherboard_RAM1" />
 					<div class="w3-display-bottom">
-						<pre>위의 사진에서 보이는 부분을 RAM 모듈을 장착할 수 있는 두 개의 슬롯이다. 주로 RAM 슬롯은 2~4개이다.
-참고로 이 MB가 지원할 수 있는 메모리의 최대량은 32GB로 16GB 모듈 2개를 장착하면 최대가 된다.
-위의 PC 조립은 8GB RAM 모듈 2개를 사용하였다.</pre>
+						<p>위의 사진에서 보이는 부분을 RAM 모듈을 장착할 수 있는 두 개의 슬롯이다. 주로 RAM 슬롯은 2~4개이다.<br/> 
+						참고로 이 메인보드가 지원할 수 있는 메모리의 최대량은 32GB로 16GB 모듈 2개를 장착하면 최대가 된다. <br/>
+						위의 PC 조립은 8GB RAM 모듈 2개를 사용하였다.</p>
 					</div>
 				</div>
 			</div>
@@ -133,8 +133,8 @@ CPU 위에 쿨러를 얹고 쿨러의 네 모서리 핀을 딸깍 소리가 날 
 					<img src="https://goo.gl/bRUAv1" title="https://goo.gl/bRUAv1"
 						alt="motherboard_RAM2" />
 					<div class="w3-display-bottom">
-						<pre>RAM 모듈을 장착하기 위해서는 위에서 보이는 슬롯의 끝 부분에 있는 레버를 젖혀서 열어야 한다.
-(레버가 슬롯의 양 끝에 있는 경우에는 양 끝의 레버 모두 젖혀야 한다)</pre>
+						<p>RAM 모듈을 장착하기 위해서는 위에서 보이는 슬롯의 끝 부분에 있는 레버를 젖혀서 열어야 한다.<br/> 
+						(레버가 슬롯의 양 끝에 있는 경우에는 양 끝의 레버 모두 젖혀야 한다)</p>
 					</div>
 				</div>
 			</div>
@@ -144,9 +144,11 @@ CPU 위에 쿨러를 얹고 쿨러의 네 모서리 핀을 딸깍 소리가 날 
 					<img src="https://goo.gl/1ze8GD" title="https://goo.gl/1ze8GD"
 						alt="motherboard_RAM23" />
 					<div class="w3-display-bottom">
-						<pre>RAM 모듈을 삽입할 경우에는 위에서 수직으로 꽂아야 한다. 슬롯에 맞게 끼운 뒤, 양손의 엄지 손가락으로 양 끝의 윗부분을 번갈아가며 꾹 눌러준다.
-RAM 모듈이 슬롯에 완전히 들어가면 젖혔던 레버가 자동으로 오므라져 닫힌다.
-위의 사진은 RAM 모듈이 장착된 모습이다.</pre>
+						<p>
+							RAM 모듈을 삽입할 경우에는 위에서 수직으로 꽂아야 한다. <br /> 슬롯에 맞게 끼운 뒤, 양손의 엄지
+							손가락으로 양 끝의 윗부분을 번갈아가며 꾹 눌러준다.<br /> RAM 모듈이 슬롯에 완전히 들어가면 젖혔던 레버가
+							자동으로 오므라져 닫힌다.<br /> 위의 사진은 RAM 모듈이 장착된 모습이다.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -154,7 +156,7 @@ RAM 모듈이 슬롯에 완전히 들어가면 젖혔던 레버가 자동으로 
 
 			<div class="w3-center">
 				<div class="w3-section">
-					<button class="w3-button" onclick="plusDivs(-1)">❮ Prev</button>
+					<button class="w3-button" onclick="plusDivs(-1)">❮ prev</button>
 					<button class="w3-button" onclick="plusDivs(1)">Next ❯</button>
 				</div>
 				<div class="w3-border-top">
