--- a/assemble5.html
+++ b/assemble5.html
@@ -18,8 +18,7 @@
 			<a href="main.html">PASS</a>
 		</header>
 		<nav class="w3-bar w3-green">
-			<a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
+			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
@@ -60,10 +59,11 @@
 					<img src="https://goo.gl/aE4LoF" title="https://goo.gl/aE4LoF"
 						alt="USBcable" />
 					<div class="w3-display-bottom">
-						<pre>케이스에 내장된 케이블을 메인보드에 연결
-						
-<b>전기적 손상이 있을 수 있기 때문에 USB 3.0 단자와 USB 2.0 단자 중 한 개만 연결할 것에 주의한다.</b>
-여기서 말하는 2.0 단자는 3.0단자와 같이 딸려 있는 단자를 말하는 것이다.</pre>
+						<p>
+							케이스에 내장된 케이블을 메인보드에 연결한다.<br /> 3.0단자와 2.0단자를 둘 다 연결해야 할 경우에 전기적
+							손상이 있을 수 있기 때문에 <br /> <b>'USB 3.0 단자에 달려있는 2.0 단자'는 같이 있는
+								3.0 단자를 쓸 때 함께 쓰지않을 것에 주의한다.</b>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -73,7 +73,10 @@
 					<img src="https://goo.gl/L2sWMm" title="https://goo.gl/L2sWMm"
 						alt="USBcable2" />
 					<div class="w3-display-bottom">
-						<pre>케이스가 3.0을 지원한다면 3.0 단자와 2.0 단자를 메인보드에 연결하고 2.0 밖에 지원하지 않는다면 2.0과 2.0을 두 개 연결한다.</pre>
+						<p>
+							케이스가 3.0을 지원한다면 3.0 단자와 2.0 단자를 메인보드에 연결하고,<br /> 2.0 밖에 지원하지
+							않는다면 2.0과 2.0을 두 개 연결한다.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -83,8 +86,8 @@
 					<img src="https://goo.gl/6jZagy" title="https://goo.gl/6jZagy"
 						alt="cables" />
 					<div class="w3-display-bottom">
-						<pre>
-케이블의 종류에는 USB 3.0 단자, USB 2.0 단자, HDD LED 단자, RESET 단자, POWER LED 단자, POWER SW 단자, HD AUDIO 단자, SPEAKER 단자 등이 있다.</pre>
+						<p>케이블의 종류에는 USB 3.0 단자, USB 2.0 단자, HDD LED 단자, RESET 단자,
+							POWER LED 단자, POWER SW 단자, HD AUDIO 단자, SPEAKER 단자 등이 있다.</p>
 					</div>
 				</div>
 			</div>
@@ -93,10 +96,12 @@
 					<img src="https://goo.gl/i2J4w3" title="https://goo.gl/i2J4w3"
 						alt="cables_motherboard" />
 					<div class="w3-display-bottom">
-						<pre>케이스에 내장된 케이블을 메인보드에 연결한다.
-+ / - 표시가 있는 단자는 잘 맞춰서 꽂아주어야 한다. (보통 색으로 구분되거나 조그마한 표시로 구분되어 있음)
-<b>HDD LED와 POWER LED 또는 POWER LED와 POWER SW(스위치 버튼)를 헷갈리지 말 것에 주의한다.</b>
-만약 POWER LED와 POWER SW를 바꿔 끼거나 잘 못 끼웠다면 전원 버튼을 눌러도 전원이 들어오지 않을 것이다.</pre>
+						<p>
+							케이스에 내장된 케이블을 메인보드에 연결한다. <br />+ / - 표시가 있는 단자는 잘 맞춰서 꽂아주어야 한다.
+							(보통 색으로 구분되거나 조그마한 표시로 구분되어 있음)<br /> <b>HDD LED와 POWER LED
+								또는 POWER LED와 POWER SW(스위치 버튼)를 헷갈리지 말 것에 주의한다.</b><br /> 만약 POWER
+							LED와 POWER SW를 바꿔 끼거나 잘 못 끼웠다면 전원 버튼을 눌러도 전원이 들어오지 않을 것이다.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -107,8 +112,10 @@
 					<img src="https://goo.gl/rDJmF4" title="https://goo.gl/rDJmF4"
 						alt="cableclear" />
 					<div class="w3-display-bottom">
-						<pre>부품들 간의 케이블 정리를 해준다.
-특히 메인보드, 쿨러 등과 케이블이 안 부딪히게 선 정리 잘 해주어야 한다.</pre>
+						<p>
+							부품들 간의 케이블 정리를 해준다. <br /> 특히 메인보드, 쿨러 등과 케이블이 안 부딪히게 선 정리 잘
+							해주어야 한다.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -118,7 +125,7 @@
 					<img src="https://goo.gl/FdhEo7" title="https://goo.gl/FdhEo7"
 						alt="cableclear2" />
 					<div class="w3-display-bottom">
-						<pre>케이스 옆면의 구멍을 이용하는 것도 깔끔하게 정리할 수 있는 좋은 방법이다.</pre>
+						<p>케이스 옆면의 구멍을 이용하는 것도 깔끔하게 정리할 수 있는 좋은 방법이다.</p>
 					</div>
 				</div>
 			</div>
@@ -128,7 +135,7 @@
 					<img src="https://goo.gl/665Hvp" title="https://goo.gl/665Hvp"
 						alt="cableclear3" />
 					<div class="w3-display-bottom">
-						<pre>케이스의 옆면을 닫아준다.</pre>
+						<p>케이스의 옆면을 닫아준다.</p>
 					</div>
 				</div>
 			</div>
@@ -138,18 +145,20 @@
 					<img src="https://goo.gl/PJNg6Z" title="https://goo.gl/PJNg6Z"
 						alt="poweron" />
 					<div class="w3-display-bottom">
-						<pre>전원 버튼을 눌러서 컴퓨터를 부팅해본다.
-모든 부품간의 궁합이 잘 맞고 조립이 잘 되었다면 쿨러가 잘 돌아가고 POWER LED에 불이 들어오면서 부팅이 시작될 것이다. 
-이 때, CMOS BIOS 화면이 뜨는지 확인해 보려면 <b>F2 키나 DEL 키</b>를 눌러본다.
-CMOS BIOS 화면에서는 날짜, 시간 등의 기본적인 설정이 가능하고 부팅 시 옵션 설정도 가능하다.
-추가로, ODD 개폐 버튼을 눌러 잘 작동되는 지 확인한다.</pre>
+						<p>
+							전원 버튼을 눌러서 컴퓨터를 부팅해본다.<br /> 모든 부품간의 궁합이 잘 맞고 조립이 잘 되었다면 쿨러가 잘
+							돌아가고 POWER LED에 불이 들어오면서 부팅이 시작될 것이다.<br /> 이 때, CMOS BIOS 화면이
+							뜨는지 확인해 보려면 <b>F2 키나 DEL 키</b>를 눌러본다.<br /> CMOS BIOS 화면에서는 날짜,
+							시간 등의 기본적인 설정이 가능하고 부팅 시 옵션 설정도 가능하다.<br /> 추가로, ODD 개폐 버튼을 눌러 잘
+							작동되는 지 확인한다.
+						</p>
 					</div>
 				</div>
 			</div>
 
 			<div class="w3-center">
 				<div class="w3-section">
-					<button class="w3-button" onclick="plusDivs(-1)">❮ Prev</button>
+					<button class="w3-button" onclick="plusDivs(-1)">❮ prev</button>
 					<button class="w3-button" onclick="plusDivs(1)">Next ❯</button>
 				</div>
 				<div class="w3-border-top">
