--- a/oddexpl.html
+++ b/oddexpl.html
@@ -61,35 +61,34 @@
 				src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Sony-Internal-PC-DVD-Drive-Opened.jpg/440px-Sony-Internal-PC-DVD-Drive-Opened.jpg"
 				title="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Sony-Internal-PC-DVD-Drive-Opened.jpg/440px-Sony-Internal-PC-DVD-Drive-Opened.jpg"
 				alt="ODD" />
-			<pre class="w3-container">
-<b><q>정의</q></b>
-
-데이터를 읽고 저장하는 주변기기이다.
-요즘은 잘 장착하지 않는 추세이다.
-
-<b><q>구분</q></b>
-
- 1.장착되는 위치에 따라
--내장형
--외장형
-*가격은 내장형보다 외장형이 더 비쌈. 
-
- 2.기능에 따라
-cd 드라이브
--cd-rom: 읽는 기능만 가능
--cd-rw: 읽고 쓰는 기능 둘 다 가능
-dvd 드라이브
--dvd-rom: DVD와 CD 읽는 기능 가능
--rw-combo: CD 쓰고 읽는 기능과 DVD 읽는 기능 모두 가능
--dvd 멀티 : cd, dvd 읽고 쓰는 기능 모두 다 가능
--블루레이 레코더 : 블루레이 플레이어에서는 cd, dvd 모두 재생되지만 역은 안됨.
-
-
-<b><q>고려사항 혹은 주의사항</q></b>
-
-케이스에 장착가능한지 꼭 확인해볼 것.
-
-		</pre>
+			<p class="w3-container">
+<b><q>정의</q></b><br/>
+<br/>
+데이터를 읽고 저장하는 주변기기이다.<br/>
+요즘은 잘 장착하지 않는 추세이다.<br/>
+<br/>
+<b><q>구분</q></b><br/>
+<br/>
+ 1.장착되는 위치에 따라<br/>
+-내장형<br/>
+-외장형<br/>
+*가격은 내장형보다 외장형이 더 비쌈. <br/>
+<br/>
+ 2.기능에 따라<br/>
+cd 드라이브<br/>
+-cd-rom: 읽는 기능만 가능<br/>
+-cd-rw: 읽고 쓰는 기능 둘 다 가능<br/>
+dvd 드라이브<br/>
+-dvd-rom: DVD와 CD 읽는 기능 가능<br/>
+-rw-combo: CD 쓰고 읽는 기능과 DVD 읽는 기능 모두 가능<br/>
+-dvd 멀티 : cd, dvd 읽고 쓰는 기능 모두 다 가능<br/>
+-블루레이 레코더 : 블루레이 플레이어에서는 cd, dvd 모두 재생되지만 역은 안됨.<br/>
+<br/>
+<b><q>고려사항 혹은 주의사항</q></b><br/>
+<br/>
+케이스에 장착가능한지 꼭 확인해볼 것.<br/>
+<br/>
+		</p>
 
 
 		</section>
