--- a/ramexpl.html
+++ b/ramexpl.html
@@ -61,35 +61,39 @@
 				src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Memory_module_DDRAM_20-03-2006.jpg/440px-Memory_module_DDRAM_20-03-2006.jpg"
 				title="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Memory_module_DDRAM_20-03-2006.jpg/440px-Memory_module_DDRAM_20-03-2006.jpg"
 				alt="RAM" />
-			<pre class="w3-container">
-<b><q>정의</q></b>
-기억된 정보를 읽어내기도 하고 다른 정보를 기억시킬 수도 있는 메모리로서,
-컴퓨터의 주기억장치, 응용 프로그램의 일시적 로딩(loading), 데이터의 일시적 저장 등에 사용된다.
-
-<b><q>구분</q></b>
- 1. 종류에 따라
-SDRAM
-DDR1 SDRAM
-DDR2 SDRAM: 전세대의 주력
-DDR3 SDRAM: 현재 주로 사용되고 있음
-DDR4 SDRAM: 최신 칩셋을 사용한 메인보드에서 사용되기 시작
-DDR5 SDRAM: 현재는 그래픽 카드에만 사용
- 2. 용량에 따라
-4GB: 시스템이 32비트인 경우(최근 환경에서는 다소 부족)
-16GB ~ 64GB: 시스템이 64비트인 경우, 최근 일반 PC용 메인보드의 최대 용량
-
-<b><q>고려사항</q></b>
- •RAM 타이밍
--DRAM은 일정 간격으로 재충전이 필요하므로 주기마다 지연이 생기며,
-메모리는 읽거나 쓰려는 공간의 행 주소와 열 주소를 읽음으로써 접근하므로,
-그 과정에서도 지연이 생기게된다. 이러한 지연시간에 대한 스펙을 고려해야한다.
-
- •RAM과 CPU의 궁합
--CPU가 메모리와 데이터를 주고받는 속도인 FSB와 RAM의 작동 속도를 일치시켜준다면 RAM과 CPU가 최상의 궁합을 이루게 된다.
--현재로서는 FSB의 작동 속도가 RAM보다 빠르므로, 
-RAM 모듈을 두 개 이상 장착하여 RAM의 대역폭이 FSB의 대역폭 이상으로 만들어 주는 것이 바람직하다. 
-
-		</pre>
+			<p class="w3-container">
+<b><q>정의</q></b><br/>
+<br/>
+기억된 정보를 읽어내기도 하고 다른 정보를 기억시킬 수도 있는 메모리로서,<br/>
+컴퓨터의 주기억장치, 응용 프로그램의 일시적 로딩(loading), 데이터의 일시적 저장 등에 사용된다.<br/>
+<br/>
+<b><q>구분</q></b><br/>
+<br/>
+ 1. 종류에 따라<br/>
+SDRAM<br/>
+DDR1 SDRAM<br/>
+DDR2 SDRAM: 전세대의 주력<br/>
+DDR3 SDRAM: 현재 주로 사용되고 있음<br/>
+DDR4 SDRAM: 최신 칩셋을 사용한 메인보드에서 사용되기 시작<br/>
+DDR5 SDRAM: 현재는 그래픽 카드에만 사용<br/>
+<br/>
+ 2. 용량에 따라<br/>
+4GB: 시스템이 32비트인 경우(최근 환경에서는 다소 부족)<br/>
+16GB ~ 64GB: 시스템이 64비트인 경우, 최근 일반 PC용 메인보드의 최대 용량<br/>
+<br/>
+<b><q>고려사항</q></b><br/>
+<br/>
+ •RAM 타이밍<br/>
+-DRAM은 일정 간격으로 재충전이 필요하므로 주기마다 지연이 생기며,<br/>
+메모리는 읽거나 쓰려는 공간의 행 주소와 열 주소를 읽음으로써 접근하므로,<br/>
+그 과정에서도 지연이 생기게된다. 이러한 지연시간에 대한 스펙을 고려해야한다.<br/>
+<br/>
+ •RAM과 CPU의 궁합<br/>
+-CPU가 메모리와 데이터를 주고받는 속도인 FSB와 RAM의 작동 속도를 일치시켜준다면 RAM과 CPU가 최상의 궁합을 이루게 된다.<br/>
+-현재로서는 FSB의 작동 속도가 RAM보다 빠르므로, <br/>
+RAM 모듈을 두 개 이상 장착하여 RAM의 대역폭이 FSB의 대역폭 이상으로 만들어 주는 것이 바람직하다. <br/>
+<br/>
+		</p>
 
 		</section>
 	</div>
