--- a/booting.html
+++ b/booting.html
@@ -7,6 +7,7 @@
 <title>PASS</title>
 <link rel="stylesheet" type="text/css" href="passcss.css" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="icon" href="https://goo.gl/m5XoZY">
 <script type="text/javascript" src="loadXML.js"></script>
 <!-- [if lt IE 9]>
         <script src="html5shiv.js"></script>
