--- a/officeRecommend.html
+++ b/officeRecommend.html
@@ -7,6 +7,7 @@
 <title>PASS</title>
 <link rel="stylesheet" type="text/css" href="passcss.css" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="icon" href="https://goo.gl/m5XoZY">
 <script type="text/javascript" src="loadXML.js"></script>
 <!-- [if lt IE 9]>
         <script src="html5shiv.js"></script>
@@ -50,7 +51,7 @@
 					onclick="w3_open()">☰</button>
 				<h3 class="w3-container">사무/가정용 제품 추천</h3>
 			</div>
-			<div id="example"></div>
+			<div class="padding" id="example"></div>
 		</section>
 
 		<div class="row">
