--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="row">
 		<header class="col-12 col-m-12"> 
-			<br/><a href="main.html">PASS.</a><p class="headerlogo"> PC Assembly Simulation System</p>
+			<br/><a href="main.html">PASS</a><p class="headerlogo">PC Assembly Simulation System</p>
 		</header>
 	</div>
 	<div class="row">
@@ -39,7 +39,7 @@
 		</nav>
 	</div>
 	<div class="row">
-		<footer> <br/><br/><br/><br/><br/><br/><br/><br/>copyright 2017. LEECHAGADA. All rights reserved.</footer>
+		<footer> <br/><br/><br/><br/><br/><br/>copyright 2017. LEECHAGADA. All rights reserved.</footer>
 	</div>
 </body>
 </html>
