--- a/assemble5.html
+++ b/assemble5.html
@@ -51,8 +51,7 @@
 		<section class="w3-border-bottom">
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰ PC 조립 가이드</button>
-				<h3 class="w3-container">5. 부품들 간의 케이블 정리 후 부팅해보기</h3>
+					onclick="w3_open()">☰ 5. 부품들 간의 케이블 정리 후 부팅해보기</button>
 			</div>
 
 			<div class=w3-center>
