--- a/booting2.html
+++ b/booting2.html
@@ -46,8 +46,7 @@
 		<section class="w3-border-bottom">
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰ PC 부팅 가이드</button>
-				<h3 class="w3-container">2. 부팅 가이드</h3>
+					onclick="w3_open()">☰ 2. 부팅 가이드</button>
 			</div>
 
 			<div class=w3-center>
