--- a/mainexpl.html
+++ b/mainexpl.html
@@ -53,10 +53,9 @@
 	</div>
 	<div class="row w3-main" id="main">
 		<section class="w3-border-bottom">
-			<div class="w3-teal w3-light-grey">
-				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰</button>
-				<h3 class="w3-container">MAIN BOARD</h3>
+			<div class=" w3-light-grey">
+				<button class="w3-button  w3-large w3-light-grey"
+					onclick="w3_open()">☰ MAIN BOARD</button>
 			</div>
 			<img class="expl"
 				src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Acer_E360_Socket_939_motherboard_by_Foxconn.svg/440px-Acer_E360_Socket_939_motherboard_by_Foxconn.svg.png"
