--- a/mouseexpl.html
+++ b/mouseexpl.html
@@ -53,10 +53,9 @@
 	</div>
 	<div class="row w3-main" id="main">
 		<section class="w3-border-bottom">
-			<div class="w3-teal w3-light-grey">
-				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰</button>
-				<h3 class="w3-container">MOUSE</h3>
+			<div class=" w3-light-grey">
+				<button class="w3-button  w3-large w3-light-grey"
+					onclick="w3_open()">☰ MOUSE</button>
 			</div>
 			<img class="expl"
 				src="http://imgnews.naver.com/image/5137/2012/11/14/31784_37743_1628_59_20121114134809.jpg"
