--- a/officeRecommend.html
+++ b/officeRecommend.html
@@ -48,8 +48,7 @@
 		<section class="w3-border-bottom">
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰</button>
-				<h3 class="w3-container">사무/가정용 제품 추천</h3>
+					onclick="w3_open()">☰ 사무/가정용 제품 추천</button>
 			</div>
 			<div class="padding" id="example"></div>
 		</section>
