--- a/assemble.html
+++ b/assemble.html
@@ -52,8 +52,7 @@
 		<section class="w3-border-bottom">
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰ PC 조립 가이드</button>
-				<h3 class="w3-container">1. 준비물 준비</h3>
+					onclick="w3_open()">☰  1. 준비물 준비</button>
 			</div>
 
 			<div class=w3-center>
