--- a/assemble3.html
+++ b/assemble3.html
@@ -51,8 +51,7 @@
 		<section class="w3-border-bottom">
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰ PC 조립 가이드</button>
-				<h3 class="w3-container">3. 케이스 분리 후 케이스에 PSU, 메인보드 장착</h3>
+					onclick="w3_open()">☰ 3. 케이스 분리 후 케이스에 PSU, 메인보드 장착</button>
 			</div>
 
 			<div class=w3-center>
