--- a/booting.html
+++ b/booting.html
@@ -47,8 +47,7 @@
 		<section class="w3-border-bottom">
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰ PC 부팅 가이드</button>
-				<h3 class="w3-container">1. 운영체제 정보</h3>
+					onclick="w3_open()">☰ 1. 운영체제 정보</button>
 			</div>
 
 			<div class=w3-center>
