--- a/component.html
+++ b/component.html
@@ -53,10 +53,9 @@
 	</div>
 	<div class="row w3-main" id="main">
 		<section class="w3-border-bottom">
-			<div class="w3-teal w3-light-grey">
-				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰</button>
-				<h3 class="w3-container">CPU</h3>
+			<div class=" w3-light-grey">
+				<button class="w3-button w3-large w3-light-grey"
+					onclick="w3_open()">☰ CPU</button>
 			</div>
 			<img class="expl"
 				src="http://imgnews.naver.net/image/092/2008/11/09/nehalem_01.jpg?type=w540"
