--- a/ramexpl.html
+++ b/ramexpl.html
@@ -53,10 +53,9 @@
 	</div>
 	<div class="row w3-main" id="main">
 		<section class="w3-border-bottom">
-			<div class="w3-teal w3-light-grey">
-				<button class="w3-button w3-teal w3-large w3-light-grey"
-					onclick="w3_open()">☰</button>
-				<h3 class="w3-container">RAM</h3>
+			<div class=" w3-light-grey">
+				<button class="w3-button  w3-large w3-light-grey"
+					onclick="w3_open()">☰ RAM</button>
 			</div>
 			<img class="expl"
 				src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Memory_module_DDRAM_20-03-2006.jpg/440px-Memory_module_DDRAM_20-03-2006.jpg"
