recommend border bottom

--- a/gameRecommend.html
+++ b/gameRecommend.html
@@ -45,12 +45,12 @@
 		</div>
 	</div>
 	<div class="row w3-main" id="main">
-		<section class="w3-border-bottom">
+		<section>
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
 					onclick="w3_open()">☰ 게임용 제품 추천</button>
 			</div>
-			<div class="padding" id="example"></div>
+			<div class="padding w3-border-bottom" id="example"></div>
 		</section>
 
 		<div class="row">
