border bottom changes

--- a/officeRecommend.html
+++ b/officeRecommend.html
@@ -50,10 +50,10 @@
 				<button class="w3-button w3-teal w3-large w3-light-grey"
 					onclick="w3_open()">☰ 사무/가정용 제품 추천</button>
 			</div>
-			<div class="padding w3-border-bottom" id="example"></div>
+			<div class="padding" id="example"></div>
 		</section>
 
-		<div class="row">
+		<div class="row w3-border-top">
 			<footer class="col-12 col-m-12"> copyright 2017. LEECHAGADA.
 				All rights reserved.</footer>
 		</div>
