마지막 커밋

--- a/aboutus.html
+++ b/aboutus.html
@@ -45,27 +45,26 @@
 					title="https://goo.gl/m5XoZY" alt="LOGO" />
 			</div>
 			<div>
-				<pre><h4><b>LEECHAGADA</b> 이차가다</h4>
-SUNGSHIN WOMEN’S UNIVERSTIY 성신여자대학교
-INFORMATION TECHNOLOGY IT학부
-<b>LEE</b> hyunjung 이현정
-<b>CHA</b> jihun 차지헌
-kim <b>GA</b> in 김가인
-choi <b>DA</b> hun 최다헌
-
+				<p><h4><b>LEECHAGADA</b> 이차가다</h4>
+SUNGSHIN WOMEN’S UNIVERSTIY 성신여자대학교<br/>
+INFORMATION TECHNOLOGY IT학부<br/>
+<b>LEE</b> hyunjung 이현정<br/>
+<b>CHA</b> jihun 차지헌<br/>
+kim <b>GA</b> in 김가인<br/>
+choi <b>DA</b> hun 최다헌<br/>
+<br/>
 <h4><b>PROFILE</b> 경력</h4>
-2017년 3~6월 성신 스터디 참여
-2017년 8월 교내 소프트웨어 경진대회 출전
-
-
+2017년 3~6월 성신 스터디 참여<br/>
+2017년 8월 교내 소프트웨어 경진대회 출전<br/>
+<br/>
 <h4><b>REFERENCE</b> 참고</h4>
-<a href="http://www.danawa.com/">다나와닷컴 : http://www.danawa.com/</a>
-<a href="">성신여대 IT학부 김도형 교수님 PC조립 자료 : PC_Assembly_2016.pdf</a>
-<a href="http://www.w3schools.com">W3schools : http://www.w3schools.com</a>
-<a href=""></a>
-<a href=""></a>
-
-			</pre>
+<a href="http://www.danawa.com/">다나와닷컴 : http://www.danawa.com/</a><br/>
+<a href="http://www.w3schools.com/">W3schools : http://www.w3schools.com</a><br/>
+<a href="http://www.github.com/">GitHub : http://www.github.com/</a><br/>
+<a>성신여대 IT학부 김도형 교수님 PC조립 자료 : PC_Assembly_2016.pdf</a><br/>
+<a href="http://introxml.honglab.org/">성신여대 IT학부 홍기형 교수님 xml개론 홈페이지 자료 : http://introxml.honglab.org/</a><br/>
+<a>'만들면서 배우는 GIT, GitHub 입문', 한빛미디어, 윤웅식 저</a><br/>
+			</p>
 			</div>
 		</section>
 	</div>
